--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Guthub lesson</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quibusdam dolorem ratione maxime quisquam debitis laboriosam eius. Aspernatur, similique dolores.</p>
 </body>
 </html>
